# latexmk-pipe

./: .gitignore  Makefile  README.md  latexmk_pipe.py  pyproject.toml  setup.py
src/latexmk_pipe/: main.py
