[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "latexmk-pipe"
version = "1.0"
authors = [
{ name="Christophe Garion", email="tofgarion@runbox.com" },
]
description = "Python wrapper script for latexmk to be used with UNIX pipes"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
"Programming Language :: Python :: 3",
"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
"Operating System :: OS Independent",
]

[project.scripts]
latexmk-pipe = "latexmk_pipe.main:main"

[project.urls]
Homepage = "https://github.com/tofgarion/latexmk-pipe"
Issues = "https://github.com/tofgarion/latexmk-pipe/issues"
